rusqlite_migration/src/tests/snapshots/rusqdoltlite_migration__tests__display__everything.snap
---
source: rusqdoltlite_migration/src/tests/display.rs
expression: everything
snapshot_kind: text
---
M(up: "UP", up hook, down: "DOWN", down hook, foreign key check, comment: "Comment, likely a filename in practice!")
