rusqlite_migration/src/tests/snapshots/rusqdoltlite_migration__tests__display__up_down_alt.snap
---
source: rusqdoltlite_migration/src/tests/display.rs
expression: "format!(\"{:#}\", m_valid0_down())"
snapshot_kind: text
---
M(
    up: "CREATE TABLE m1(a, b); CREATE TABLE m2(a, b, c);", 
    down: "DROP TABLE m1; DROP TABLE m2;"
)
